deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maintenance
  namespace: demomaintenance
spec:
  replicas: 1
  selector:
    matchLabels:
      app: maintenance
  template:
    metadata:
      labels:
        app: maintenance
    spec:
      containers:
        - name: maintenance
          image: 172.16.189.130:8082/edu.mv/maintenance:0.0.17
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
