service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maintenance
spec:
  type: LoadBalancer
  selector:
    app: maintenance
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
